[build-system]
requires = [
    "cffi>=1.0.0",
    "setuptools>=40.6.0",
    "setuptools_scm[toml]>=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.coverage.html]
show_contexts = true
skip_covered = false

[tool.coverage.run]
branch = true
source = ["referencing"]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "\\s*\\.\\.\\.\\s*",
]
show_missing = true
skip_covered = true

[tool.doc8]
ignore = [
    "D001",  # one sentence per line, so max length doesn't make sense
]

[tool.isort]
combine_as_imports = true
from_first = true
include_trailing_comma = true
known_first_party = "_avif"
multi_line_output = 3

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["ANN", "B", "D", "E", "F", "Q", "UP", "W"]
ignore = [
  # Wat, type annotations for self and cls, why is this a thing?
  "ANN101",
  "ANN102",
  # Private annotations are fine to leave out.
  "ANN202",
  # I don't know how to more properly annotate "pass along all arguments".
  "ANN401",
  # raise SomeException(...) is fine.
  "B904",
  # It's fine to not have docstrings for magic methods.
  "D105",
  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
  "D200",
  # No blank lines before docstrings.
  "D203",
  # Start docstrings on the second line.
  "D212",
  # This rule misses sassy docstrings ending with ! or ?.
  "D400",
  # Section headers should end with a colon not a newline
  "D406",
  # Underlines aren't needed
  "D407",
  # Plz spaces after section headers
  "D412",
  # We support 3.8 + 3.9
  "UP007",
]
extend-exclude = ["libavif"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"docs/*" = ["ANN", "D"]
"examples*" = ["D103"]
"avif/tests/*" = ["ANN", "D"]
"noxfile.py" = ["ANN", "D"]
"setup.py" = ["ANN", "D"]
