[metadata]
name = avif
url = https://github.com/Julian/avif
project_urls =
    Source = https://github.com/Julian/avif
    Issues = https://github.com/Julian/avif/issues/
description = Python bindings for libavif
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+avif@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    attrs
    cffi>=1.0.0

[flake8]
exclude =
    avif/_build.py
